--- a/web/components/ui/Button/_button.scss
+++ b/web/components/ui/Button/_button.scss
@@ -18,6 +18,12 @@
       width: 100%;
     }
   }
+  &--auto {
+    width: 100%;
+    .MuiButton-root {
+      width: 100%;
+    }
+  }
   display: inline-block;
   .sq-icon {
     margin-right: 8px;
