--- a/web/components/ui/TextColumnWithLinks/_text-column-links.scss
+++ b/web/components/ui/TextColumnWithLinks/_text-column-links.scss
@@ -9,27 +9,26 @@
 
   &--3-cols {
     .sq-text-column-links-default {
-      border: solid 1px $sq-color-gray-lighter;
-      border-bottom: none;
-      display: flex;
-      flex-direction: column;
-      @media (min-width: $screen-md) {
-        flex-direction: row;
-        flex-wrap: wrap;
+      &__wrapper {
+        border-left: solid 1px $sq-color-gray-lighter;
+        border-top: solid 1px $sq-color-gray-lighter;
+        display: flex;
+        flex-direction: column;
+        @media (min-width: $screen-md) {
+          flex-direction: row;
+          flex-wrap: wrap;
+        }
       }
       &__item {
         padding: 40px 60px;
         flex-basis: 33%;
         flex-grow: 1;
 
-        border-right: none;
         border-bottom: solid 1px $sq-color-gray-lighter;
+        border-right: solid 1px $sq-color-gray-lighter;
 
-        &:nth-child(3n) {
-          border-right: none;
-        }
+      
         @media (min-width: $screen-sm) {
-          border-right: solid 1px $sq-color-gray-lighter;
         }
       }
       &__icon {
