--- a/web/components/ui/MagicHeroContent/_magic-hero-content.scss
+++ b/web/components/ui/MagicHeroContent/_magic-hero-content.scss
@@ -18,12 +18,12 @@
   }
 
   overflow: hidden;
-  &.pin-container {
+  .pin-container {
     height: 100vh;
     width: 100%;
     overflow: hidden;
   }
-  &.pin-container .panel {
+  .pin-container .panel {
     height: 100vh;
     width: 100%;
     display: flex;
@@ -40,41 +40,8 @@
     font-size: 80px;
   }
 
-  .panel.blue {
-    background-color: #3883d8;
-  }
-
-  .panel.turqoise {
-    background-color: #38ced7;
-  }
-
-  .panel.green {
-    background-color: #22d659;
-  }
-
-  .panel.bordeaux {
-    background-color: #953543;
-  }
 
   &-pencil {
-    padding: 60px 0;
-    .sq-magic-hero-content {
-      &__wrapper {
-        display: flex;
-        align-items: center;
-        text-align: center;
-        flex-wrap: wrap;
-      }
-      &__content-col,
-      &__content-image {
-        flex-basis: 100%;
-      }
-      &__image {
-        padding: 0 100px;
-        img {
-          width: 50%;
-        }
-      }
-    }
+   
   }
 }
