--- a/web/styles/_containers.scss
+++ b/web/styles/_containers.scss
@@ -90,3 +90,33 @@
 .container-full {
   padding: 20px 0 0 0;
 }
+
+
+
+.panel-bg-primary {
+  background: $sq-color-primary;
+  color:white;
+}
+.panel-bg-secondary {
+  color:white;
+  background: $sq-color-secondary;
+}
+.panel-bg-gray {
+  background: $sq-color-gray-lightest;
+}
+.panel-bg-success {
+  background: $sq-color-success-darker;
+  color:white;
+}
+.panel-bg-info {
+  color:white;
+  background: $sq-color-info;
+}
+.panel-bg-warning {
+  background: $sq-color-warning;
+  color:white;
+}
+.panel-bg-error {
+  color:white;
+  background: $sq-color-error;
+}
