--- a/web/styles/abstract/_variables.scss
+++ b/web/styles/abstract/_variables.scss
@@ -112,6 +112,10 @@ $header-font-family: "Lato-Regular", Arial;
 $paragraph-font-family: "Lato-Light", Arial;
 $text-font-family: "Lato-Light", Arial;
 
+$jumbo-font-size: 58px;
+$large-font-size: 48px;
+$big-font-size: 40px;
+
 $t1-font-size: 36px;
 $t2-font-size: 30px;
 $t3-font-size: 24px;
