--- a/web/components/ui/GlobalNavigation/_global-navigation.scss
+++ b/web/components/ui/GlobalNavigation/_global-navigation.scss
@@ -187,7 +187,22 @@ $sq-global-navigation-sub-navbg: $white;
       }
     }
     &--right {
+      .sq-link {
+        margin-right: 8px;
+      }
       margin-right: 0;
+      flex-grow: 0;
+      > li {
+        margin-right: 0;
+      }
+    }
+    &--left {
+      display: block;
+      @media (min-width: $screen-md) {
+        display: none;
+      }
+      margin-right: 20px;
+      padding: 0;
       flex-grow: 0;
       > li {
         margin-right: 0;
