--- a/web/components/ui/GlobalNavigation/_global-navigation.scss
+++ b/web/components/ui/GlobalNavigation/_global-navigation.scss
@@ -19,13 +19,13 @@ $sq-global-navigation-sub-navbg: $white;
     z-index: $z-index-level-2ndtopest;
   }
   &--sticky {
-    background: #fff;
+    background: #ffffff;
     position: fixed;
     top: 0;
     left: 0;
     border-bottom: solid 1px $sq-color-gray-lighter;
     animation: moveDown 0.5s ease-in-out;
-    z-index: 1;
+    z-index: $z-index-level-2ndtopest;
   }
   &--open {
     background-color: $sq-global-navigation-background-color;
