--- a/web/components/ui/DateNavigator/date-navigator.scss
+++ b/web/components/ui/DateNavigator/date-navigator.scss
@@ -6,8 +6,13 @@
   &__content {
     flex-grow: 1;
     align-items: center;
-    @include b2-style();
+    @include b3-style();
     justify-content: center;
     display: flex;
+  }
+  &--small {
+    .sq-date-navigator__content {
+      @include b3-style();
+    }
   }
 }
