--- a/web/components/ui/Navigation/navigation.scss
+++ b/web/components/ui/Navigation/navigation.scss
@@ -3,4 +3,12 @@
   &__right-menu {
     margin-right: 10px;
   }
+  
+}
+.sq-global-navigation-drawer {
+  &__app-version {
+    @include b4-style();
+    padding: 15px;
+    color:$sq-color-gray;
+  }
 }
