--- a/web/components/ui/HeroContent/_hero-content.scss
+++ b/web/components/ui/HeroContent/_hero-content.scss
@@ -31,7 +31,6 @@
     text-align: center;
     margin: auto;
     width: 100%;
-    height: 200px;
     max-width: 100%;
     padding: 0 40px;
     margin-top: 24px;
@@ -46,7 +45,6 @@
       width: 100%;
       padding: 0 100px;
       height: auto;
-      max-height: 300px;
     }
     img {
       width: 100%;
@@ -247,6 +245,11 @@
       margin-left: 0;
       margin-right: 0;
       width: 100%;
+    }
+  }
+  &--landscape {
+    .sq-hero-content__image {
+      max-height: 300px;
     }
   }
   &--dark {
