--- a/cms/apps/core/partials/topnav.ejs
+++ b/cms/apps/core/partials/topnav.ejs
@@ -2,8 +2,8 @@
   <div class="container">
     <nav class="navbar navbar-expand-md no-gutters">
       <div class="col-3 text-left">
-        <a class="nav-link" href="/content/in/home">
-          <img src="/client/assets/svg/logo.svg" height="50" alt="image"> SwishQube
+        <a class="nav-link" href="/">
+          <img src="/client/assets/svg/logo.svg" height="50" alt="image"> Default
         </a>
       </div>
 
