--- a/web/components/ui/GlobalNavigation/_global-navigation.scss
+++ b/web/components/ui/GlobalNavigation/_global-navigation.scss
@@ -16,7 +16,7 @@ $sq-global-navigation-sub-navbg: $white;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: $z-index-level-2ndtopest;
+    z-index: $z-index-level-4;
   }
   &--bordered {
     border-bottom: solid 1px $sq-color-gray-lighter;
