--- a/web/components/ui/ImageOnDevice/_image-on-device.scss
+++ b/web/components/ui/ImageOnDevice/_image-on-device.scss
@@ -27,6 +27,34 @@
       }
     }
   }
+  &--iphone11 {
+    width: 100%;
+    .sq-image-on-device {
+      &__overlay {
+        position: relative;
+        width: 100%;
+        max-width: 418px;
+        img {
+          width: 100%;
+        }
+      }
+      &__screen {
+        width: 87%;
+        overflow: hidden;
+        top: 2.5%;
+        left: 6.59%;
+        position: absolute;
+        height: 96%;
+        img {
+          width: 100%;
+          position: absolute;
+          height: 100%;
+          top: 0;
+          left: 0;
+        }
+      }
+    }
+  }
 
   &--ipad {
     width: 100%;
