--- a/web/components/Progress/progress.scss
+++ b/web/components/Progress/progress.scss
@@ -31,8 +31,8 @@
     height: 100vh;
     left: 0;
     top: 0;
-    background: #000;
-    opacity: 0.5;
+    background: #fff;
+    opacity: .5;
     z-index: $z-index-level-2ndtopest;
   }
 
