--- a/web/components/Chart/chart.scss
+++ b/web/components/Chart/chart.scss
@@ -7,6 +7,7 @@
     padding: 10px;
     .tooltip-header {
       @include t4-style();
+      margin-bottom: 8px;
     }
     .tooltip-dot {
       display: inline-block;
@@ -17,6 +18,7 @@
     }
     .tooltip-data {
       display: flex;
+      margin-bottom: 4px;
     }
     .tooltip-label {
       margin-right: 5px;
