--- a/web/styles/_containers.scss
+++ b/web/styles/_containers.scss
@@ -58,7 +58,7 @@
   }
 }
 .container-form {
-  padding: 20px 0 0 0;
+  padding-top: 20px;
   @media screen and (min-width: $screen-md) {
     min-width: 400px;
   }
