Fixed global navigation width in mobile

--- a/web/components/ui/GlobalNavigation/_global-navigation.scss
+++ b/web/components/ui/GlobalNavigation/_global-navigation.scss
@@ -92,6 +92,7 @@ $sq-global-navigation-sub-navbg: $white;
   }
   &__item-wrapper {
     display: inline-block;
+    width: 100%;
   }
   &__item {
     &-text {
