--- a/web/containers/ContentWithSearch/_content-with-search.scss
+++ b/web/containers/ContentWithSearch/_content-with-search.scss
@@ -14,12 +14,15 @@
   &__block-header {
     .sq-header__header {
       @include t4-style();
+      background: $sq-color-gray-lightest;
+      padding: 16px 32px;
+      border-left: solid 5px $sq-color-secondary;
     }
     padding-bottom: 20px;
   }
   &__nav-block {
-    padding: 5px 10px;
-    border-left: solid 5px $sq-color-primary-dark;
+    padding: 5px 0px;
+    color: $link-color;
     margin-bottom: 8px;
     @include t4-style();
     cursor: pointer;
