--- a/web/components/ui/Autocomplete/auto-complete.scss
+++ b/web/components/ui/Autocomplete/auto-complete.scss
@@ -1,6 +1,6 @@
 .sq-autocomplete {
   
 }
-.MuiAutocomplete-popper {
+.MuiPopover-root, .MuiAutocomplete-popper {
   z-index:  9999999999 !important;
 }
