--- a/web/components/ui/Link/link.scss
+++ b/web/components/ui/Link/link.scss
@@ -10,6 +10,7 @@ a {
   &__container {
     display: flex;
     align-items: center;
+    justify-content: center;
   }
   &__icon {
     display: flex;
