--- a/cms/apps/core/src/styles/abstracts/_variables.scss
+++ b/cms/apps/core/src/styles/abstracts/_variables.scss
@@ -1,5 +1,3 @@
-$sq-color-primary: red;
-
 $white: #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
@@ -12,9 +10,9 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
-$sq-color-primary: #339ef7;
+$sq-color-primary: #339ef7 !default;
+$sq-color-secondary: #ac4500 !default;
 
-$component-prefix: "sq-cmp";
+$component-prefix: 'sq-cmp' !default;
 
-
-$screen-md: 1024px;
+$screen-md: 1024px !default;
