--- a/web/components/ui/HeroContent/_hero-content.scss
+++ b/web/components/ui/HeroContent/_hero-content.scss
@@ -66,6 +66,7 @@
   &--default {
     padding: 40px 0;
     max-width: 100%;
+    width: 100%;
     @media (min-width: $screen-sm) {
       padding: 60px 0;
     }
