--- a/web/components/ui/NavigationList/_navigation-list.scss
+++ b/web/components/ui/NavigationList/_navigation-list.scss
@@ -13,7 +13,8 @@
     }
   }
   &__header {
-    border-left: 5px solid $sq-color-info;
+    border-left: 5px solid $sq-color-primary;
+    color: $sq-color-primary;
     padding-left: 10px;
   }
 }
