--- a/web/components/ui/HeroContent/_hero-content.scss
+++ b/web/components/ui/HeroContent/_hero-content.scss
@@ -137,6 +137,7 @@
     .sq-hero-content__root {
       background-size: cover;
       background-repeat: no-repeat;
+      background-position: right;
     }
 
     @media (min-width: $screen-sm) {
