--- a/web/components/Form/form.scss
+++ b/web/components/Form/form.scss
@@ -21,4 +21,50 @@
       margin-bottom: 8px;
     }
   }
+
+  &--2-cols {
+    .sq-form-cmp_fields {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .sq-form-cmp__field {
+      flex-basis: 100%;
+      @media (min-width:$screen-sm) {
+        flex-basis: 50%;
+        padding-right: 20px;
+        &:nth-child(even) {
+          padding-right: 0;
+        }
+      }
+    }
+  }
+  &--3-cols {
+    .sq-form-cmp_fields {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .sq-form-cmp__field {
+      flex-basis: 100%;
+      @media (min-width:$screen-sm) {
+        flex-basis: 33%;
+        padding-right: 20px;
+        &:nth-child(3) {
+          padding-right: 0;
+        }
+      }
+    }
+  }
+  &--inline-auto {
+    .sq-form-cmp_fields {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .sq-form-cmp__field {
+      flex-basis: 100%;
+      @media (min-width:$screen-sm) {
+        flex-basis: auto;
+        padding-right: 20px;
+      }
+    }
+  }
 }
