--- a/web/styles/index.scss
+++ b/web/styles/index.scss
@@ -1,6 +1,7 @@
 @import "vendor/index.scss";
 @import "base";
 @import "layout";
+@import "text";
 @import "animations";
 @import "typography";
 @import "loading";
